--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Face Recognition</title>
   <style>
     body {
+      background-image:linear-gradient(to right,#ff5722,#ff9800);
       margin: 0;
       padding: 0;
       width: 100vw;
@@ -24,10 +25,23 @@
       top: 0;
       left: 0;
     }
+    input {
+      background-color: darkgrey;
+      border-radius: 10px;
+      height: wrap;
+      font-size: 10pt;
+
+      
+    }
+    p{
+      font-size: 20px;
+      font-family: fantasy;
+    }
   </style>
 </head>
 <body>
+  <p>welcome to face recognizer app</p>
+  <div>click 'choose file' to start</div>
   <input type="file" id="imageUpload">
-  <div>hi</div>
 </body>
 </html>
